[project]
name = "krddevbot"
version = "0.1.0"
description = ""
authors = [
    {name = "TyVik", email = "tyvik@krd.dev"}
]
license = {text = "MIT"}
requires-python = ">=3.13"

dependencies = [
    "python-telegram-bot[job-queue]>=21.9,<22",
    "sentry-sdk>=1.39.2,<2",
    "redis>=5.2.1,<6",
]

[project.urls]
Homepage = "https://t.me/krddevdays_chat"
Repository = "https://github.com/krddevdays/bot"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 120
exclude = [".venv", ".git", "__pycache__"]

[tool.ruff.lint]
ignore = ["E501", "E203", "E305", "F401", "F541"]
